[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/aco.png" type="Texture" id=1]
[ext_resource path="res://scripts/Item.gd" type="Script" id=2]
[ext_resource path="res://assets/particles/particles.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 248.704, 195.184 )

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.989691, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="Curve" id=2]
max_value = 0.01
_data = [ Vector2( 0.0858586, 0.681818 ), 0.0, 0.0, 0, 0, Vector2( 0.626263, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.854545 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
trail_divisor = 8
trail_size_modifier = SubResource( 3 )
flag_align_y = true
flag_disable_z = true
spread = 105.0
flatness = 0.15
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.1
scale_curve = SubResource( 8 )
color = Color( 0.32549, 1, 0.952941, 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2( 0.1, 0.1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="Area2D"]
rotation = -8.74228e-08
scale = Vector2( 1.08041, 1.04154 )
z_as_relative = false
amount = 2
lifetime = 0.01
speed_scale = 0.03
visibility_rect = Rect2( 10, -100, 200, 200 )
process_material = SubResource( 4 )
texture = ExtResource( 4 )

[node name="SpriteItem" type="Sprite" parent="Area2D"]
position = Vector2( -4.40125, 4.40132 )
scale = Vector2( 1.00431, 0.950144 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[node name="Light2D" type="Light2D" parent="."]
visible = false
texture = ExtResource( 4 )
color = Color( 0.909804, 0.917647, 0.054902, 1 )
energy = 0.0
mode = 2
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_all_completed" from="Tween2" to="." method="_on_Tween2_tween_all_completed"]
